--- a/README.Rmd
+++ b/README.Rmd
@@ -26,7 +26,7 @@ knitr::opts_chunk$set(
 
 To benefit from the latest features and bug fixes, install the development, *github* version of the package using:
 ```{r install2, eval=FALSE}
-devtools::install_github("thibautjombart/tracer")
+devtools::install_github("reconhub/tracer")
 ```
 
 Note that this requires the package *devtools* installed.
